--- a/Book/유혹하는글쓰기.md
+++ b/Book/유혹하는글쓰기.md
@@ -1,10 +1,10 @@
-# 유혹하는 글쓰기기
+# 유혹하는 글쓰기
 
 <일의 격> 에서 '자주 써라 길게 쓸 필요 없다. 
 
  타인에게 영향주려고 쓰면 피곤해진다. 처음엔 2~3줄로 충분하다. 저도 몇 년간은 트위터를 하면서 2~3줄만 썼다. 그리고 무슨 언론 기고나 책 쓰는 것도 아니고 뭔 작문 시험 보는 것도 아닌데 썼다 지웠다 신경 쓸 이유도 없다. 아무렇그러다가 좀 쓰게 되면 글쓰기 관련한 책은 한권 보면 된다'라는 말에 집어들게 된 글쓰기 책이다.
 
- 
+
 <일의 격>
 너무 ‘길게’ 그것도 ‘자주’ 그리고 ‘잘’ 쓰려 하면 오래가지 못한다. 저처럼 주말에만 쓰는 것도 방법이다. 주위 사람들의 반응은 ‘동기’가 되기도 하고 ‘독’이 되기도 한다. 그냥 적절한 동기부여 정도로만 받아들여야지 너무 의식하면 피곤해진다. 자신을 위해서 쓰는 것이지
 
