--- a/MindNotes/책이좋은점.md
+++ b/MindNotes/책이좋은점.md
@@ -1,6 +1,23 @@
 # 책이 좋은 이유
 
-책을 읽다보니 생각의 깊이가 깊어진다.
+그냥 좋다.
 
-작성중..
+방구석에 앉아서 온 세상을 탐험 할 수 있다. 
+
+정말 유명한 사람들과 대화 할 수 있다. 
+
+싼 값에 귀한 보물을 얻을 수 있다. 
+
+힘든 시간을 견디게 해준다. 
+
+지적 성장을 이룰 수 있게 해준다. 
+
+글을 쓰고 싶은 욕구가 샘솟게 한다. 
+
+자신감이 생긴다. 
+
+나를 객관적으로 바라 볼 수 있게 한다. 
+
+앎의 깊이기 깊어진다. 
+
 
